--- a/app/assets/lang/_custom.toml
+++ b/app/assets/lang/_custom.toml
@@ -15,6 +15,6 @@ sourceGithubLink = "https://github.com/dscalZi/HeliosLauncher"
 supportLink = "https://github.com/dscalZi/HeliosLauncher/issues"
 
 [ejs.welcome]
-welcomeHeader = "WELCOME TO WESTEROSCRAFT"
-welcomeDescription = "Our mission is to recreate the universe imagined by author George RR Martin in his fantasy series, A Song of Ice and Fire.  Through the collaborative effort of thousands of community members, we have sought to create Westeros as accurately and precisely as possible within Minecraft.  The world we are creating is yours to explore.  Journey from Dorne to Castle Black, and if you aren’t afraid, beyond the Wall itself, but best not delay.  As the words of House Stark ominously warn: Winter is Coming."
-welcomeDescCTA = "You are just a few clicks away from Westeros."
+welcomeHeader = "BONJOUR"
+welcomeDescription = "Vous etes ici sur le luncher officielle de l'ESME, ce luncher a ete develope sur la base de l'Elios Luncher et modifier et adapter par le BDJ (bureau des jeux), de l'Esme (Ecole generaliste d'ingenieur). Vous retrouverez touts les liens de l'ecole une fois que vous vous serez connecter.Amusez vous bien !! "
+welcomeDescCTA = "Vous n'estes plus qu'a quelques clicks !."
